--- a/Team Fortress 2/tf/cfg/autoexec.cfg
+++ b/Team Fortress 2/tf/cfg/autoexec.cfg
@@ -6,7 +6,7 @@ exec null					//Null-cancelling movement script
 exec scores					//Adds "net_graph 3" to your Scoreboard
 //exec autocj					//Automatic Crouchjump when pressing Space
 exec chattoggle				//Binds "l" to toggle the ingame chat
-exec antigib				//removes Gib particles
+//exec antigib				//removes Gib particles
 exec classes				//Binds all Classes to the Numpad
 exec changelevel
 
@@ -17,10 +17,10 @@ fps_max 0
 mat_motion_blur_enabled 0
 hud_takesshots 0
 tf_use_min_viewmodels 1
-volume 0.5
+volume 0.25
 viewmodel_fov 70
 zoom_sensitivity_ratio 0.793471
-voice_enable 0
+voice_enable 1
 joystick 0
 cl_crosshair_red 0
 cl_crosshair_green 255
@@ -45,15 +45,15 @@ snd_mix_async 1
 
 //---Network Settings---//
 
-cl_interp 0
-cl_interp_ratio 2
+cl_interp 0.0157
+cl_interp_ratio 1
 cl_lagcompensation 1
-cl_pred_optimize 2
-cl_smooth 1
+cl_pred_optimize 1
+cl_smooth 0
 cl_smoothtime 0
-rate 60000
-cl_cmdrate 66
-cl_updaterate 66
+rate 786432
+cl_cmdrate 128
+cl_updaterate 128
 
 //---Binds---//
 
