Updating my Configs

--- a/Team Fortress 2/tf/cfg/autoexec.cfg
+++ b/Team Fortress 2/tf/cfg/autoexec.cfg
@@ -2,9 +2,9 @@
 
 exec numbers				//Resets Numberkeys for Class specific configs
 exec confilter				//Filter out "Error" from console
-exec null					//Null-cancelling movement script
+//exec null					//Null-cancelling movement script
 exec scores					//Adds "net_graph 3" to your Scoreboard
-//exec autocj					//Automatic Crouchjump when pressing Space
+//exec autocj				//Automatic Crouchjump when pressing Space
 exec chattoggle				//Binds "l" to toggle the ingame chat
 //exec antigib				//removes Gib particles
 exec classes				//Binds all Classes to the Numpad
@@ -13,18 +13,14 @@ exec changelevel
 //---General Settings---//
 
 mat_phong 0
+crosshair 0
 fps_max 0
 mat_motion_blur_enabled 0
 hud_takesshots 0
 tf_use_min_viewmodels 1
-volume 0.25
-viewmodel_fov 70
-zoom_sensitivity_ratio 0.793471
+volume 0.5
 voice_enable 1
 joystick 0
-cl_crosshair_red 0
-cl_crosshair_green 255
-cl_crosshair_blue 0
 cl_playerspraydisable 1
 r_spray_lifetime 0
 r_shadowmaxrendered 0				
@@ -41,19 +37,23 @@ snd_async_fullyasync 1
 snd_pitchquality 1												
 snd_spatialize_roundrobin 1				
 snd_mixahead 0.1						 
-snd_mix_async 1							
+snd_mix_async 1	
+prec_dir demos
+mat_queue_mode -1					
 
 //---Network Settings---//
 
-cl_interp 0.0157
+cl_interp 0.035
+cl_interp_all 1
+cl_interp_npcs 1
 cl_interp_ratio 1
 cl_lagcompensation 1
-cl_pred_optimize 1
-cl_smooth 0
+cl_pred_optimize 2
+cl_smooth 1
 cl_smoothtime 0
-rate 786432
-cl_cmdrate 128
-cl_updaterate 128
+rate 60000
+cl_cmdrate 66
+cl_updaterate 66
 
 //---Binds---//
 
@@ -66,6 +66,14 @@ bind PgDn "say /remove"
 bind HOME "jointeam spectator"
 bind END "pause"
 bind m "play misc/tf_crowd_walla_intro.wav"
+bind m "mute"
+alias mute "voice_enable 0; bind m "unmute""
+alias unmute "voice_enable 1; bind m "mute""
 alias demo "exec demoreview"
 alias aim "exec aim"
+alias aim2 "exec aim2"
 alias health "exec healthandammo"
+bind space "+jump"
+bind shift "+duck"
+bind ctrl "+voicerecord"
+bindtoggle l cl_enable_text_chat 0 1
